# llmops-databricks-course-numericalmachinelearning

./: CLAUDE.md  databricks.yml  eval_inputs.txt  profilr_agent.py  project_config.yml  pyproject.toml
.claude/commands/: run-notebook.md
.github/: CODEOWNERS
.github/workflows/: cd.yml
notebooks/: 2_discover_contributors.py  2_github_ingestion.py  3_mcp_integration.py  4_mlflow.py  5_endpoint_deployment.py  5_spn_permissions.py  6_production_monitoring.py  6_send_requests.py  profilr.py
resources/: 2_discover_contributors_job.yml  2_github_ingestion_job.yml  3_mcp_integration_job.yml  4_mlflow_job.yml  agent_monitoring_dashboard.lvdash.json  agent_monitoring_dashboard.yml  hello_world_job.yml  profilr_job.yml  register_deploy_agent_job.yml  update_traces_aggregated_job.yml
src/profilr/: __init__.py  agent.py  config.py  evaluation.py  mcp.py  orchestrator.py  schemas.py  vector_search.py
src/profilr/agents/: bluesky_lookup.py  github_lookup.py  linkedin_lookup.py
src/profilr/tools/: github_search.py  tavily_search.py
src/your_custom_package/: __init__.py
tests/: __init__.py  test_basic.py
